# cmake-cpp-template-lib

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
cli/: CMakeLists.txt
lib/: CMakeLists.txt
